--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2776,7 +2776,7 @@ section {
   flex-basis: auto;
   /* vertical-align: baseline; */
   display: inline-block;
-  width: 20%;
+  /* width: 20%; */
 }
 
 .icon_wrap {
@@ -4859,4 +4859,39 @@ input[type="text"]:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media only screen and (max-width: 570px){
+  .fix-radio{
+    display: grid;
+  }
+  .zelleImg{
+    width:100% !important;
+  }
+  .fst_wrap{
+    padding:0 !important;
+    margin-top:10px;
+  }
+}
+@media only screen and (min-width: 770px){
+  .paymentcards{
+    width: auto !important;
+  }
+}
+@media only screen and (max-width: 576px){
+  .sponsors_wrap{
+    background-color: #EDEEEE;
+  }
+  .sponsorList li{
+    margin-top:10px;
+  }
+}
+@media only screen and (max-width: 410px){
+  .qrCode{
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 500px){
+  .giftamttext{
+    font-size:18px;
+  }
 }
